src/test/ui/issues/issue-11681.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-11681.rs:12:20
   |
LL |   let testValue = &Test;
   |                    ^^^^ creates a temporary which is freed while still in use
LL |   return testValue;
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
